fix: slider buttons z-index

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  z-index: 10;
+  z-index: 1000;
   position: fixed;
   top: 0;
   left: 0;
